Bug 77649 - desktop-shell does not properly handle seats that are initialized after the shell.
Summary: desktop-shell does not properly handle seats that are initialized after the s...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Jason Ekstrand
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-18 16:38 UTC by Jason Ekstrand
Modified: 2014-04-29 23:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Jason Ekstrand 2014-04-18 16:38:33 UTC
The problem is that the desktop shell does not properly attach to the signals of seats that get added after the shell is initialized.  This results in xdg_surface.[de]activate events not being sent to clients when running under the RDP or Wayland backends.
Comment 1 Jason Ekstrand 2014-04-22 00:45:48 UTC
This is fixed by the following patch:
http://lists.freedesktop.org/archives/wayland-devel/2014-April/014356.html
Comment 2 Kristian Høgsberg 2014-04-29 23:51:44 UTC
commit 024177cecb5bfad228804656e17ac02ac6fd96bf
Author: Jason Ekstrand <jason@jlekstrand.net>
Date:   Mon Apr 21 19:42:58 2014 -0500

    desktop-shell: Properly handle seat hotplugging
    
    Previously, desktop-shell would only create its internal shell_seat object
    for each seat available when the desktop-shell module is loaded.  This is a
    problem any time seats are created dynamically.  In particular, the Wayland
    and RDP backends create seats on an as-needed basis and they weren't
    getting picked up proprely by desktop-shell.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=77649


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.