desktop-shell/shell.h
@@ -199,6 +199,7 @@ struct desktop_shell {
 
 	struct weston_layer minimized_layer;
 
+	struct wl_listener seat_create_listener;
 	struct wl_listener output_create_listener;
 	struct wl_listener output_move_listener;
 	struct wl_list output_list;
